--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_API=https://doctorbooking-app.herokuapp.com/api
-REACT_APP_API2=http://localhost:5000/api
+REACT_APP_API2=https://doctorbooking-app.herokuapp.com/api
+REACT_APP_API=http://localhost:5000/api
