--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "eslint-config-react-app": "^7.0.0",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.2",
+    "qrcode.react": "^3.0.2",
     "react": "^17.0.2",
     "react-big-calendar": "^0.40.1",
     "react-circular-progressbar": "^2.0.4",
